--- a/practice/projects.html
+++ b/practice/projects.html
@@ -6,26 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practice website</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
 </head>
 <body>
-    <div class="topnav">
-        <a href="#" id="img_logo">
-            <img src="hj_logo.png" alt="Logo" width="30" height="24">
-                <a href="#" id="title_name">HARSHAL JOHN</a>
-        </a>
-        <div class="nav_right">               
-            <a href="home.html">HOME</a>
-            <a href="explore.html">EXPORE ME</a>
-            <a class="active" href="projects.html">PROJECTS</a>
-            <a href="sign_up.html">SIGN UP</a>
-            <a href="contact_us.html">CONTACT US</a>
-        </div>  
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>   
+    <header class="header">
+        <a href="#" class="logo">HARSHAL JOHN</a>
+         <nav class="navbar">               
+             <a href="home.html">HOME</a>
+             <a href="explore.html">EXPORE ME</a>
+             <a class="active" href="projects.html">PROJECTS</a>
+             <a href="sign_up.html">SIGN UP</a>
+             <a href="contact_us.html">CONTACT US</a>
+         </nav>  
+     </header>
 </body>               
            
           
